add api GetAvailableNFTList
