# backend/service-go/app/service-main/api/main/v1/main_http.pb.go
@@ -18,6 +18,7 @@ var _ = binding.EncodeURL
 const _ = http.SupportPackageIsVersion1
 
 type MainHTTPServer interface {
+	GetAvailableNFTList(context.Context, *GetAvailableNFTListReq) (*GetAvailableNFTListResp, error)
 	GetLeaderboard(context.Context, *GetLeaderboardReq) (*GetLeaderboardResp, error)
 	Ping(context.Context, *PingReq) (*PingResp, error)
 }
@@ -26,6 +27,7 @@ func RegisterMainHTTPServer(s *http.Server, srv MainHTTPServer) {
 	r := s.Route("/")
 	r.GET("/service/main/v1/ping", _Main_Ping0_HTTP_Handler(srv))
 	r.GET("/service/main/v1/getLeaderboard", _Main_GetLeaderboard0_HTTP_Handler(srv))
+	r.GET("/service/main/v1/getAvailableNFTList", _Main_GetAvailableNFTList0_HTTP_Handler(srv))
 }
 
 func _Main_Ping0_HTTP_Handler(srv MainHTTPServer) func(ctx http.Context) error {
@@ -66,7 +68,27 @@ func _Main_GetLeaderboard0_HTTP_Handler(srv MainHTTPServer) func(ctx http.Contex
 	}
 }
 
+func _Main_GetAvailableNFTList0_HTTP_Handler(srv MainHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetAvailableNFTListReq
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, "/main.v1.Main/GetAvailableNFTList")
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetAvailableNFTList(ctx, req.(*GetAvailableNFTListReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*GetAvailableNFTListResp)
+		return ctx.Result(200, reply)
+	}
+}
+
 type MainHTTPClient interface {
+	GetAvailableNFTList(ctx context.Context, req *GetAvailableNFTListReq, opts ...http.CallOption) (rsp *GetAvailableNFTListResp, err error)
 	GetLeaderboard(ctx context.Context, req *GetLeaderboardReq, opts ...http.CallOption) (rsp *GetLeaderboardResp, err error)
 	Ping(ctx context.Context, req *PingReq, opts ...http.CallOption) (rsp *PingResp, err error)
 }
@@ -77,6 +99,19 @@ type MainHTTPClientImpl struct {
 
 func NewMainHTTPClient(client *http.Client) MainHTTPClient {
 	return &MainHTTPClientImpl{client}
+}
+
+func (c *MainHTTPClientImpl) GetAvailableNFTList(ctx context.Context, in *GetAvailableNFTListReq, opts ...http.CallOption) (*GetAvailableNFTListResp, error) {
+	var out GetAvailableNFTListResp
+	pattern := "/service/main/v1/getAvailableNFTList"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation("/main.v1.Main/GetAvailableNFTList"))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, err
 }
 
 func (c *MainHTTPClientImpl) GetLeaderboard(ctx context.Context, in *GetLeaderboardReq, opts ...http.CallOption) (*GetLeaderboardResp, error) {
