# backend/service-go/ent/schema/t_go_nft.go
@@ -1,0 +1,36 @@
+// Code generated by entimport, DO NOT EDIT.
+
+package schema
+
+import (
+	"entgo.io/ent"
+	"entgo.io/ent/dialect/entsql"
+	"entgo.io/ent/schema"
+	"entgo.io/ent/schema/field"
+	"time"
+)
+
+type TGoNFT struct {
+	ent.Schema
+}
+
+func (TGoNFT) Fields() []ent.Field {
+	return []ent.Field{
+		field.Uint64("id").Comment("auto increment primary key"),
+		field.String("wallet_pub").Default("").Comment("wallet public key"),
+		field.Int("rank_type").Default(0).Comment("type of rank, 0 monthly 1 quarterly 2 yearly"),
+		field.Int("rank_year").Default(0).Comment("year of rank"),
+		field.Int("rank_season").Default(0).Comment("season of rank, 1-12 for monthly, 1-4 for quarterly, 0 for yearly"),
+		field.Int("rank").Default(0).Comment("rank in the leaderboard"),
+		field.String("mint_tx").Default("").Comment("hash of mint tx"),
+		field.Time("mtime").Comment("modify time").Default(time.Now()).UpdateDefault(time.Now),
+		field.Time("ctime").Comment("create time").Default(time.Now())}
+}
+func (TGoNFT) Edges() []ent.Edge {
+	return nil
+}
+func (TGoNFT) Annotations() []schema.Annotation {
+	return []schema.Annotation{
+		entsql.Annotation{Table: "t_go_nfts"},
+	}
+}
